--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
 }
 
 section {
-  margin: 4.3em 1.5em;
+  margin: 4.3rem 1.5rem;
 }
 
 .text_light {
@@ -57,9 +57,9 @@ h5 {
 }
 
 .card {
-  padding: 1.6em 1.9em;
+  padding: 1.6rem 1.9rem;
   border-radius: 0.6rem;
-  margin-top: 1.6em;
+  margin-top: 1.6rem;
 }
 
 .title {
@@ -68,9 +68,10 @@ h5 {
 }
 
 .title > img {
-  border: 3px solid var(--ltgrey);
+  border: 0.19rem solid var(--ltgrey);
   border-radius: 50%;
-  margin-right: 1em;
+  margin-right: 1rem;
+  width: 2.19rem;
 }
 
 .info {
@@ -96,4 +97,32 @@ h5 {
 }
 .fourth {
   background-color: var(--dkblacksblue);
+}
+.fifth {
+  background-color: var(--white);
+}
+
+@media only screen and (min-width: 1440px) {
+  section {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, auto);
+    column-gap: 1.88rem;
+    margin: 10.3rem 12.19rem;
+  }
+  .first {
+    grid-column: 1 / span 2;
+  }
+  .third {
+    grid-column: 1;
+  }
+  .fourth {
+    grid-row: 2;
+    grid-column: 2 / span 2;
+  }
+
+  .fifth {
+    grid-row: 1 / span 2;
+    grid-column: 4;
+  }
 }
