--- a/css/main.css
+++ b/css/main.css
@@ -27,15 +27,20 @@ section {
   }
 }
 
-.card {
+.card-violet {
   padding: 1.6rem 1.8rem;
   border-radius: 0.6rem;
   margin-top: 1.6rem;
   -webkit-box-shadow: 0 0.3rem 1rem rgba(0, 0, 0, 0.2);
           box-shadow: 0 0.3rem 1rem rgba(0, 0, 0, 0.2);
+  background-color: #7541c8;
+  color: white;
+  background-image: url("../images/bg-pattern-quotation.svg");
+  background-repeat: no-repeat;
+  background-position: top right 1.56rem;
 }
 
-.card .card_title {
+.card-violet .card_title {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -44,39 +49,33 @@ section {
           align-items: center;
 }
 
-.card .card_title > img {
+.card-violet .card_title > img {
   border: 0.19rem solid #cfcfcf;
   border-radius: 50%;
   margin-right: 1rem;
   width: 2.19rem;
 }
 
-.card .card_title h4 {
+.card-violet .card_title > div > h4 {
   padding: 0;
   margin: 0;
+  color: white;
 }
 
-.card .card_title h5 {
+.card-violet .card_title > div > h5 {
   padding: 0;
   margin: 0;
+  color: rgba(255, 255, 255, 0.603);
 }
 
-.card .card_info {
+.card-violet .card_info {
   font-size: 1.3rem;
   line-height: 1.2;
 }
 
-.card .card_quote {
+.card-violet .card_quote {
   font-size: 0.8rem;
   line-height: 1.5;
-}
-
-.card-violet {
-  background-color: #7541c8;
-  color: white;
-  background-image: url("../images/bg-pattern-quotation.svg");
-  background-repeat: no-repeat;
-  background-position: top right 1.56rem;
 }
 
 @media only screen and (min-width: 1440px) {
@@ -91,11 +90,99 @@ section {
 }
 
 .card-dkgreysblue {
+  padding: 1.6rem 1.8rem;
+  border-radius: 0.6rem;
+  margin-top: 1.6rem;
+  -webkit-box-shadow: 0 0.3rem 1rem rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0.3rem 1rem rgba(0, 0, 0, 0.2);
   background-color: #48556a;
+  color: white;
+}
+
+.card-dkgreysblue .card_title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.card-dkgreysblue .card_title > img {
+  border: 0.19rem solid #cfcfcf;
+  border-radius: 50%;
+  margin-right: 1rem;
+  width: 2.19rem;
+}
+
+.card-dkgreysblue .card_title > div > h4 {
+  padding: 0;
+  margin: 0;
+  color: white;
+}
+
+.card-dkgreysblue .card_title > div > h5 {
+  padding: 0;
+  margin: 0;
+  color: rgba(255, 255, 255, 0.603);
+}
+
+.card-dkgreysblue .card_info {
+  font-size: 1.3rem;
+  line-height: 1.2;
+}
+
+.card-dkgreysblue .card_quote {
+  font-size: 0.8rem;
+  line-height: 1.5;
 }
 
 .card-white {
+  padding: 1.6rem 1.8rem;
+  border-radius: 0.6rem;
+  margin-top: 1.6rem;
+  -webkit-box-shadow: 0 0.3rem 1rem rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0.3rem 1rem rgba(0, 0, 0, 0.2);
   background-color: white;
+  color: #19212e;
+}
+
+.card-white .card_title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.card-white .card_title > img {
+  border: 0.19rem solid #cfcfcf;
+  border-radius: 50%;
+  margin-right: 1rem;
+  width: 2.19rem;
+}
+
+.card-white .card_title > div > h4 {
+  padding: 0;
+  margin: 0;
+  color: #19212e;
+}
+
+.card-white .card_title > div > h5 {
+  padding: 0;
+  margin: 0;
+  color: rgba(72, 85, 106, 0.5);
+}
+
+.card-white .card_info {
+  font-size: 1.3rem;
+  line-height: 1.2;
+}
+
+.card-white .card_quote {
+  font-size: 0.8rem;
+  line-height: 1.5;
 }
 
 @media only screen and (min-width: 1440px) {
@@ -106,7 +193,51 @@ section {
 }
 
 .card-black {
+  padding: 1.6rem 1.8rem;
+  border-radius: 0.6rem;
+  margin-top: 1.6rem;
+  -webkit-box-shadow: 0 0.3rem 1rem rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0.3rem 1rem rgba(0, 0, 0, 0.2);
   background-color: #19212e;
+  color: white;
+}
+
+.card-black .card_title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.card-black .card_title > img {
+  border: 0.19rem solid #cfcfcf;
+  border-radius: 50%;
+  margin-right: 1rem;
+  width: 2.19rem;
+}
+
+.card-black .card_title > div > h4 {
+  padding: 0;
+  margin: 0;
+  color: white;
+}
+
+.card-black .card_title > div > h5 {
+  padding: 0;
+  margin: 0;
+  color: rgba(255, 255, 255, 0.603);
+}
+
+.card-black .card_info {
+  font-size: 1.3rem;
+  line-height: 1.2;
+}
+
+.card-black .card_quote {
+  font-size: 0.8rem;
+  line-height: 1.5;
 }
 
 @media only screen and (min-width: 1440px) {
@@ -119,6 +250,54 @@ section {
   }
 }
 
+.card-white--2 {
+  padding: 1.6rem 1.8rem;
+  border-radius: 0.6rem;
+  margin-top: 1.6rem;
+  -webkit-box-shadow: 0 0.3rem 1rem rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0.3rem 1rem rgba(0, 0, 0, 0.2);
+  background-color: white;
+  color: #19212e;
+}
+
+.card-white--2 .card_title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.card-white--2 .card_title > img {
+  border: 0.19rem solid #cfcfcf;
+  border-radius: 50%;
+  margin-right: 1rem;
+  width: 2.19rem;
+}
+
+.card-white--2 .card_title > div > h4 {
+  padding: 0;
+  margin: 0;
+  color: #19212e;
+}
+
+.card-white--2 .card_title > div > h5 {
+  padding: 0;
+  margin: 0;
+  color: rgba(72, 85, 106, 0.5);
+}
+
+.card-white--2 .card_info {
+  font-size: 1.3rem;
+  line-height: 1.2;
+}
+
+.card-white--2 .card_quote {
+  font-size: 0.8rem;
+  line-height: 1.5;
+}
+
 @media only screen and (min-width: 1440px) {
   .card-white--2 {
     -ms-grid-row: 1;
@@ -127,21 +306,5 @@ section {
     -ms-grid-column: 4;
     grid-column: 4;
   }
-}
-
-.text_light {
-  color: white;
-}
-
-.text_light50 {
-  color: rgba(255, 255, 255, 0.603);
-}
-
-.text_dark {
-  color: #19212e;
-}
-
-.text_dark50 {
-  color: rgba(72, 85, 106, 0.5);
 }
 /*# sourceMappingURL=main.css.map */
