--- a/main.scss
+++ b/main.scss
@@ -31,11 +31,14 @@ section {
     margin: 10.3rem 12.19rem;
   }
 }
-.card {
+
+@mixin card($backColor, $textColor: $white) {
   padding: 1.6rem 1.8rem;
   border-radius: 0.6rem;
   margin-top: 1.6rem;
   box-shadow: 0 0.3rem 1rem rgba(0, 0, 0, 0.2);
+  background-color: $backColor;
+  color: $textColor;
 
   .card_title {
     display: flex;
@@ -48,14 +51,42 @@ section {
       width: 2.19rem;
     }
 
-    h4 {
+    & > div > h4 {
       padding: 0;
       margin: 0;
+
+      @if $backColor ==
+        $modviolet or
+        $backColor ==
+        $dkblacksblue or
+        $backColor ==
+        $dkgreysblue
+      {
+        color: $white;
+      } @else if $backColor == $white {
+        color: $dkblacksblue;
+      } @else {
+        color: $white;
+      }
     }
 
-    h5 {
+    & > div > h5 {
       padding: 0;
       margin: 0;
+
+      @if $backColor ==
+        $modviolet or
+        $backColor ==
+        $dkblacksblue or
+        $backColor ==
+        $dkgreysblue
+      {
+        color: $white50;
+      } @else if $backColor == $white {
+        color: $dkgreysblue50;
+      } @else {
+        color: $white50;
+      }
     }
   }
 
@@ -71,8 +102,7 @@ section {
 }
 
 .card-violet {
-  background-color: $modviolet;
-  color: $white;
+  @include card($modviolet);
   background-image: url($quotationImg);
   background-repeat: no-repeat;
   background-position: top right 1.56rem;
@@ -86,11 +116,11 @@ section {
 }
 
 .card-dkgreysblue {
-  background-color: $dkgreysblue;
+  @include card($dkgreysblue);
 }
 
 .card-white {
-  background-color: $white;
+  @include card($white, $dkblacksblue);
 
   @media only screen and (min-width: $Desktop) {
     grid-column: 1;
@@ -98,8 +128,7 @@ section {
 }
 
 .card-black {
-  background-color: $dkblacksblue;
-
+  @include card($dkblacksblue);
   @media only screen and (min-width: $Desktop) {
     grid-row: 2;
     grid-column: 2 / span 2;
@@ -107,24 +136,9 @@ section {
 }
 
 .card-white--2 {
+  @include card($white, $dkblacksblue);
   @media only screen and (min-width: $Desktop) {
     grid-row: 1 / span 2;
     grid-column: 4;
   }
-}
-
-.text_light {
-  color: $white;
-}
-
-.text_light50 {
-  color: $white50;
-}
-
-.text_dark {
-  color: $dkblacksblue;
-}
-
-.text_dark50 {
-  color: $dkgreysblue50;
 }
